--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="main-container">
         <h1 class="main-title">Vega-Lite Data Visualizations</h1>
       </div>
     </header>
-    <div class="container">
+    <div class="main-container">
       <div class="bar-chart-area">
-        <div id="bar-chart"></div>
+        <div class="chart-container">
+          <div id="bar-chart"></div>
+        </div>
         <button id="btnRandomize">Randomize</button>
       </div>
     </div>
