--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vega-Lite Data Visualizations</title>
+    <title>Vega-Lite Visualizations</title>
     <link rel="stylesheet" href="./styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
@@ -11,8 +11,8 @@
   </head>
   <body>
     <header>
-      <div class="header-container">
-        <h1 class="main-title">Vega-Lite Data Visualizations</h1>
+      <div class="title-container">
+        <h1 class="main-title">Vega-Lite Visualizations</h1>
       </div>
     </header>
     <div class="main-container">
